add selection.js, rework divs in html and styles.css, and add calculateAge.test.js to the __Tests__ folder.

--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,13 @@
       </div>
       <div class="body2 outlinedBody"></div>
       <div class="body3 outlinedBody"></div>
-      <div class="body4 outlinedBody"></div>
-      <div class="body5 outlinedBody"></div>
-      <div class="body6 outlinedBody"></div>
-      <div class="body7 outlinedBody"></div>
-      <div class="body8 outlinedBody"></div>
+      <div class="body4 outlinedBody">
+        <div class="venus hidden"></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
     </div>
   </body>
 </html>
