make updates to css and html.

--- a/src/index.html
+++ b/src/index.html
@@ -11,19 +11,21 @@
       </div>
       <div class="body2 outlinedBody">
         <div class="dataBox">
-          <form id="infoForm">
-            <label for="currentEarthAge">What is your age?</label>
-            <input type="number" name="currentEarthAge" required />
-          </form>
+          <div class="contentBox">
+            <form id="infoForm">
+              <label for="currentEarthAge">What is your age?</label>
+              <input type="number" name="currentEarthAge" required />
+            </form>
+          </div>
         </div>
       </div>
       <div class="body3 outlinedBody">
         <div class="row planets">
-          <div class="col mercuryPlanet">Mercury</div>
-          <div class="col venusPlanet">Venus</div>
-          <div class="col earthPlanet">Earth</div>
-          <div class="col marsPlanet">Mars</div>
-          <div class="col jupiterPlanet">Jupiter</div>
+          <div class="col mercuryPlanet" id="planet1">Mercury</div>
+          <div class="col venusPlanet" id="planet2">Venus</div>
+          <div class="col earthPlanet" id="planet3">Earth</div>
+          <div class="col marsPlanet" id="planet4">Mars</div>
+          <div class="col jupiterPlanet" id="planet5">Jupiter</div>
         </div>
       </div>
       <div class="body4 outlinedBody">
