--- a/src/index.html
+++ b/src/index.html
@@ -12,29 +12,42 @@
       <div class="body2 outlinedBody">
         <div class="dataBox">
           <div class="contentBox">
-            <form id="infoForm">
-              <label for="currentEarthAge">What is your age?</label>
-              <input type="number" name="currentEarthAge" required />
+            <form id="infoForm" class="form">
+              <label for="currentEarthAge">Your Age?</label>
+              <input type="number" name="currentEarthAge" required /></br>
+              <label for="desiredAge">Target Age:</label>
+              <input type="number" name="desiredAge" required /></br>
+              <label for="nameOfUser">What is your name?</label>
+              <input type="text" name="nameOfUser" required /></br>
+              <button id="submitButton">Submit!</button>
             </form>
+          </div>
+          <div class="contentBox">
+            <h1>Contact Us!</h1>
+            <p>Coming soon!</p>
+          </div>
+          <div class="contentBox">
+            <p class="footerPhrase">"Per Audacia Ad Astra"</p>
           </div>
         </div>
       </div>
       <div class="body3 outlinedBody">
         <div class="row planets">
-          <div class="col mercuryPlanet" id="planet1">Mercury</div>
-          <div class="col venusPlanet" id="planet2">Venus</div>
-          <div class="col earthPlanet" id="planet3">Earth</div>
-          <div class="col marsPlanet" id="planet4">Mars</div>
-          <div class="col jupiterPlanet" id="planet5">Jupiter</div>
+          <div class="col mercuryPlanet planet" id="planet1">Mercury</div>
+          <div class="col venusPlanet planet" id="planet2">Venus</div>
+          <div class="col earthPlanet planet" id="planet3">Earth</div>
+          <div class="col marsPlanet planet" id="planet4">Mars</div>
+          <div class="col jupiterPlanet planet" id="planet5">Jupiter</div>
         </div>
       </div>
       <div class="body4 outlinedBody">
-        <div class="hidden" id="mercury"></div>
-        <div class="hidden" id="venus"></div>
-        <div class="hidden" id="earth"></div>
-        <div class="hidden" id="mars"></div>
-        <div class="hidden" id="jupiter" ></div>
+        <div class="hidden" id="mercury"><p>1</p></div>
+        <div class="hidden" id="venus"><p>2</p></div>
+        <div class="hidden" id="earth"><p>3</p></div>
+        <div class="hidden" id="mars"><p>4</p></div>
+        <div class="hidden" id="jupiter"><p>5</p></div>
       </div>
+      
     </div>
   </body>
 </html>
