add assets/images files. This will also update submit.js, index.js, index.html, and calculateAge.js.

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,10 @@
   <body>
     <div class="grid-body">
       <div class="body1 outlinedBody">
-        <h1>What is your planetary age?</h1>
-        <p>By: JButch-99</p>
+        <h1 class="headEmbolden">What is your planetary age?</h1>
+        <p class="creditHead">By: JButch-99</p>
       </div>
+
       <div class="body2 outlinedBody">
         <div class="dataBox">
           <div class="contentBox">
@@ -34,6 +35,7 @@
           </div>
         </div>
       </div>
+
       <div class="body3 outlinedBody">
         <div class="row planets">
           <div class="col mercuryPlanet planet" id="planet1">Mercury</div>
@@ -43,14 +45,20 @@
           <div class="col jupiterPlanet planet" id="planet5">Jupiter</div>
         </div>
       </div>
+
       <div class="body4 outlinedBody">
-        <div class="hidden" id="mercury"><p>1</p></div>
-        <div class="hidden" id="venus"><p>2</p></div>
-        <div class="hidden" id="earth"><p>3</p></div>
-        <div class="hidden" id="mars"><p>4</p></div>
-        <div class="hidden" id="jupiter"><p>5</p></div>
+        <div class="cover" id="coverScreen">
+          
+        </div>
+        <div id="content" class="hidden">
+          <div class="hidden" id="mercury"><p>1</p></div>
+          <div class="hidden" id="venus"><p>2</p></div>
+          <div class="hidden" id="earth"><p>3</p></div>
+          <div class="hidden" id="mars"><p>4</p></div>
+          <div class="hidden" id="jupiter"><p>5</p></div>
+        </div>
       </div>
-      
+
     </div>
   </body>
 </html>
