update CSS, add more content in assets/images, and update index.js.

--- a/src/index.html
+++ b/src/index.html
@@ -50,12 +50,21 @@
         <div class="cover" id="coverScreen">
           
         </div>
-        <div id="content" class="hidden">
-          <div class="hidden" id="mercury"><p>1</p></div>
-          <div class="hidden" id="venus"><p>2</p></div>
-          <div class="hidden" id="earth"><p>3</p></div>
-          <div class="hidden" id="mars"><p>4</p></div>
-          <div class="hidden" id="jupiter"><p>5</p></div>
+        <div id="content" class="hidden contentFrame">
+          <div class="col-md-6">
+
+          </div>
+          <div class="col-md-6">
+            <div class="infoBox">
+              <div class="photoChosen" id="photoFrame">
+
+              </div>
+            </div>
+
+            <div class="infoBox">
+
+            </div>
+          </div>
         </div>
       </div>
 
